--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-kcron (4:4.11.2-1) UNRELEASED; urgency=low
+kcron (4:4.11.2-1) experimental; urgency=low
 
   * First release of kdeadmin after being split by upstream.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Oct 2013 11:37:00 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Oct 2013 12:02:57 +0200
