--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kcron (4:4.11.2-1r1) UNRELEASED; urgency=low
+kcron (4:4.11.3-1) UNRELEASED; urgency=low
 
   * Update debian/copyright, thanks to Ansgar Burchardt.
+  * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 21 Oct 2013 15:13:00 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 09 Nov 2013 20:26:28 +0100
 
 kcron (4:4.11.2-1) experimental; urgency=low
 
