--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kcron (4:4.11.3-1) UNRELEASED; urgency=low
 
   * Update debian/copyright, thanks to Ansgar Burchardt.
   * New upstream release.
+  * Update build dependencies.
 
  -- Maximiliano Curia <maxy@debian.org>  Sat, 09 Nov 2013 20:26:28 +0100
 
