--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-kcron (4:4.11.3-2) UNRELEASED; urgency=medium
+kcron (4:4.11.4-1) UNRELEASED; urgency=low
+
+  * New upstream release.
 
   [ Pino Toscano ]
   * Remove obsolete installgen file.
