--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kcron (4:4.11.3-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 18 Jan 2014 11:45:29 +0100
+
 kcron (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
