--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kcron (4:4.11.5-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Bump Standards-Version to 3.9.5, no changes needed.
 
   [ Pino Toscano ]
   * Remove obsolete installgen file.
