--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kcron (4:4.11.5-1) UNRELEASED; urgency=low
+kcron (4:4.12.2-1) UNRELEASED; urgency=low
 
   * New upstream release.
   * Bump Standards-Version to 3.9.5, no changes needed.
@@ -6,7 +6,10 @@ kcron (4:4.11.5-1) UNRELEASED; urgency=low
   [ Pino Toscano ]
   * Remove obsolete installgen file.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 18 Jan 2014 11:45:29 +0100
+  [ Maximiliano Curia ]
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 19:24:06 +0100
 
 kcron (4:4.11.3-1) unstable; urgency=low
 
