--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ kcron (4:4.12.2-1) UNRELEASED; urgency=low
 
   [ Maximiliano Curia ]
   * New upstream release.
+  * Bump kde-sc-dev-latest build dependency.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 19:24:06 +0100
 
