--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kcron (4:4.12.2-1) UNRELEASED; urgency=low
+kcron (4:4.12.2-1) experimental; urgency=low
 
   * New upstream release.
   * Bump Standards-Version to 3.9.5, no changes needed.
@@ -10,7 +10,7 @@ kcron (4:4.12.2-1) UNRELEASED; urgency=low
   * New upstream release.
   * Bump kde-sc-dev-latest build dependency.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 19:24:06 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 10 Feb 2014 11:32:10 +0100
 
 kcron (4:4.11.3-1) unstable; urgency=low
 
