--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:4.12.2-2~) UNRELEASED; urgency=medium
+kcron (4:4.12.2-2) unstable; urgency=medium
 
   * Release to unstable
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 17 Apr 2014 15:15:57 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 28 Apr 2014 12:24:03 +0200
 
 kcron (4:4.12.2-1) experimental; urgency=low
 
