--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kcron (4:4.13.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Jul 2014 12:57:56 +0200
+
 kcron (4:4.12.2-2) unstable; urgency=medium
 
   * Release to unstable
