--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:4.13.3-1) UNRELEASED; urgency=medium
+kcron (4:4.13.3-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Jul 2014 12:57:56 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 25 Jul 2014 12:48:15 +0200
 
 kcron (4:4.12.2-2) unstable; urgency=medium
 
