--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:4.14.0-1) UNRELEASED; urgency=medium
+kcron (4:4.14.0-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 18 Aug 2014 18:19:44 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 20 Aug 2014 14:00:18 +0200
 
 kcron (4:4.13.3-1) unstable; urgency=medium
 
