--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kcron (4:4.14.2-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (4.14.2).
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 16 Oct 2014 13:41:16 +0200
+
 kcron (4:4.14.0-1) unstable; urgency=medium
 
   * New upstream release.
