--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:4.14.2-1~) UNRELEASED; urgency=medium
+kcron (4:4.14.2-1) unstable; urgency=medium
 
   * New upstream release (4.14.2).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 16 Oct 2014 13:41:16 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 20 Oct 2014 17:12:54 +0200
 
 kcron (4:4.14.0-1) unstable; urgency=medium
 
