--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+kcron (4:4.14.2-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 25 Oct 2014 17:23:14 -0300
+
 kcron (4:4.14.2-1) unstable; urgency=medium
 
   * New upstream release (4.14.2).
