--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 kcron (4:4.14.2-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Remove myself from Uploaders.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 25 Oct 2014 17:23:14 -0300
 
 kcron (4:4.14.2-1) unstable; urgency=medium
