--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+kcron (4:14.11.95-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream beta release.
+  * Fix watch urls for new release location.
+  * Update Vcs urls for the new repository location.
+  * Bump Standards-Version to 3.9.6, no changes needed.
+  * Update the maintainer.
+  * Suggest khelpcenter instead of khelpcenter4.
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Sun, 23 Nov 2014 14:04:42 +0100
+
 kcron (4:4.14.2-2) UNRELEASED; urgency=medium
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
