--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kcron (4:14.11.97-0ubuntu1) UNRELEASED; urgency=medium
+kcron (4:14.11.97-0ubuntu1~ubuntu15.04~ppa1) vivid; urgency=medium
 
   * New upstream release candidate.
   * Fix watch urls for new release location.
@@ -6,8 +6,9 @@ kcron (4:14.11.97-0ubuntu1) UNRELEASED; urgency=medium
   * Bump Standards-Version to 3.9.6, no changes needed.
   * Update the maintainer.
   * Suggest khelpcenter instead of khelpcenter4.
+  * PPA build
 
- -- Philip Muškovac <yofel@kubuntu.org>  Sun, 23 Nov 2014 14:04:42 +0100
+ -- Philip Muškovac <yofel@kubuntu.org>  Fri, 28 Nov 2014 21:33:14 +0100
 
 kcron (4:4.14.2-2) UNRELEASED; urgency=medium
 
