--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kcron (4:14.11.97-0ubuntu1~ubuntu15.04~ppa1) vivid; urgency=medium
+kcron (4:14.11.97-0ubuntu1) vivid; urgency=medium
 
   * New upstream release candidate.
   * Fix watch urls for new release location.
