--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kcron (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 12 Dec 2014 04:22:05 -0800
+
 kcron (4:14.11.97-0ubuntu1) vivid; urgency=medium
 
   * New upstream release candidate.
