--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:14.12.2-0ubuntu1) UNRELEASED; urgency=medium
+kcron (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 05 Feb 2015 21:00:22 +0000
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 10 Feb 2015 08:54:33 -0800
 
 kcron (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
