--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,13 @@
-kcron (4:14.12.2-1~) UNRELEASED; urgency=medium
+kcron (4:14.12.2-1) experimental; urgency=medium
 
   * Prepare Debian release.
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Remove myself from Uploaders.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 17 Feb 2015 11:54:49 +0100
+  [ Maximiliano Curia ]
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 17 Feb 2015 13:05:15 +0100
 
 kcron (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
