--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,9 @@ kcron (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
   * New upstream release
+  * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 21:28:44 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 08:25:11 -0700
 
 kcron (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
