--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-kcron (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
+kcron (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * New upstream release
   * New upstream release
   * Vivid backport
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 27 May 2015 08:25:11 -0700
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 06 Jun 2015 00:58:12 +0200
 
 kcron (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
