--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kcron (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
+kcron (4:15.04.2-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
   * New upstream release
@@ -8,7 +8,7 @@ kcron (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 06 Jun 2015 00:58:12 +0200
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 09 Jun 2015 18:42:47 +0200
 
 kcron (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
