--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kcron (4:15.04.3-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 02 Jul 2015 17:12:52 +0000
+
 kcron (4:15.04.2-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
