--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-kcron (4:15.04.0-1~) UNRELEASED; urgency=medium
+kcron (4:15.04.3-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
+  * New upstream release (15.04.3).
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 23 Apr 2015 16:31:16 +0200
 
