--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,11 @@
 kcron (4:15.04.3-1~) UNRELEASED; urgency=medium
 
+  [ Maximiliano Curia ]
   * New upstream release (15.04.0).
+
+  [ Jeremy Lainé ]
   * New upstream release (15.04.3).
+  * Fix kde-config-cron.install for KF5.
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 23 Apr 2015 16:31:16 +0200
 
