--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
-kcron (4:15.04.3-1~) UNRELEASED; urgency=medium
+kcron (4:15.04.3-1) experimental; urgency=medium
+
+  * Team upload.
 
   [ Maximiliano Curia ]
   * New upstream release (15.04.0).
@@ -8,7 +10,7 @@ kcron (4:15.04.3-1~) UNRELEASED; urgency=medium
   * Fix kde-config-cron.install for KF5.
   * Add a patch to set a valid category for the control module.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 23 Apr 2015 16:31:16 +0200
+ -- Jeremy Lainé <jeremy.laine@m4x.org>  Tue, 28 Jul 2015 13:43:13 +0200
 
 kcron (4:14.12.2-1) experimental; urgency=medium
 
