--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:15.08.0-0ubuntu1) UNRELEASED; urgency=medium
+kcron (4:15.08.0-0ubuntu1) wily; urgency=medium
 
   * new upstream release
 
- -- Clive Johnston <clivejo@aol.com>  Thu, 20 Aug 2015 13:22:45 +0000
+ -- Clive Johnston <clivejo@aol.com>  Wed, 26 Aug 2015 17:11:37 +0100
 
 kcron (4:15.07.90-0ubuntu1) wily; urgency=medium
 
