--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kcron (4:15.08.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (15.08.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Sep 2015 18:48:28 +0200
+
 kcron (4:15.04.3-1) experimental; urgency=medium
 
   * Team upload.
