--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:15.08.0-1~) UNRELEASED; urgency=medium
+kcron (4:15.08.0-1) unstable; urgency=medium
 
   * New upstream release (15.08.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Sep 2015 18:48:28 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Sep 2015 19:03:30 +0200
 
 kcron (4:15.08.0-0ubuntu1) wily; urgency=medium
 
