--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+kcron (4:15.08.1-0ubuntu1) wily; urgency=medium
 
   * New upstream release (15.08.1)
 
- -- Clive Johnston <clivejo@aol.com>  Wed, 16 Sep 2015 23:02:03 +0100
+ -- Clive Johnston <clivejo@aol.com>  Tue, 22 Sep 2015 16:20:57 +0100
 
 kcron (4:15.08.0-0ubuntu1) wily; urgency=medium
 
