--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kcron (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Vivid backport
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 01 Oct 2015 09:49:13 -0700
+
 kcron (4:15.08.1-0ubuntu1) wily; urgency=medium
 
   * New upstream release (15.08.1)
