--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kcron (4:15.08.1-0ubuntu1) UNRELEASED; urgency=medium
+kcron (4:15.08.2-0ubuntu1) UNRELEASED; urgency=medium
 
   * Vivid backport
+  * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 01 Oct 2015 09:49:13 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 09 Oct 2015 13:51:52 -0700
 
 kcron (4:15.08.1-0ubuntu1) wily; urgency=medium
 
