--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
+kcron (4:15.08.2-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Vivid backport. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 03 Nov 2015 06:39:05 +0000
+
 kcron (4:15.08.2-0ubuntu1) wily; urgency=medium
 
-  * Vivid backport
   * New upstream release
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 14 Oct 2015 12:07:47 +0100
