--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kcron (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+  * Debian merge: No remaining changes. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 29 Jan 2016 14:24:49 -0800
+
 kcron (4:15.12.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.12.0).
