--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kcron (4:15.12.0-1~) UNRELEASED; urgency=medium
+kcron (4:15.12.0-1) experimental; urgency=medium
 
   * New upstream release (15.12.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Dec 2015 16:10:49 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 01 Feb 2016 10:23:28 +0100
 
 kcron (4:15.08.0-1) unstable; urgency=medium
 
