--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kcron (4:15.12.1-0ubuntu1) UNRELEASED; urgency=medium
+kcron (4:15.12.1-0ubuntu1) xenial; urgency=medium
 
   * New upstream release.
   * Debian merge: No remaining changes. 
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 29 Jan 2016 14:24:49 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 09 Mar 2016 10:33:35 +0100
 
 kcron (4:15.12.0-1~) UNRELEASED; urgency=medium
 
