--- a/debian/changelog
+++ b/debian/changelog
@@ -1,16 +1,13 @@
-kcron (4:16.08.0-1~2.gbpeb80bd) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @eb80bd2cb17476097e6ba2fa48fe55ecfc451068 **
+kcron (4:16.08.0-1) unstable; urgency=medium
 
   [ Automatic packaging ]
-  ** SNAPSHOT build @c5b61cf86e8910a466fa7466b8d676fe9d3ef57b **
-
   * Refresh patches
 
   [ Maximiliano Curia ]
+  * New upstream release (16.08.0)
   * Update install files
 
- -- Maximiliano Curia <maxy@gnuservers.com.ar>  Mon, 29 Aug 2016 11:42:36 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 17 Oct 2016 23:20:46 +0200
 
 kcron (4:16.04.0-1) unstable; urgency=medium
 
