--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
-kcron (4:17.08.1-1~) UNRELEASED; urgency=medium
+kcron (4:17.08.1-1~1) UNRELEASED; urgency=medium
 
   * New upstream release (17.08.1)
   * Bump Standards-Version to 4.1.0.
   * Update upstream metadata
   * Update build-deps and deps with the info from cmake
+  * Update uploaders list as requested by MIA team (Closes: #879319)
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 06 Sep 2017 17:07:17 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 31 Oct 2017 17:59:32 +0100
 
 kcron (4:17.08.1-0neon) xenial; urgency=medium
 
