--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,7 @@
-kcron (4:17.08.3-0r1) UNRELEASED; urgency=medium
+kcron (4:17.08.3-1) unstable; urgency=medium
+
+  * Team upload.
+  * Upload to unstable.
 
   [ Maximiliano Curia ]
   * New upstream release (17.08.1)
@@ -17,7 +20,7 @@ kcron (4:17.08.3-0r1) UNRELEASED; urgency=medium
     is no need for kde-config-cron.install.
   * Remove duplicated Priority in the kcron binary.
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 31 Oct 2017 17:59:32 +0100
+ -- Pino Toscano <pino@debian.org>  Sun, 26 Nov 2017 15:42:59 +0100
 
 kcron (4:17.08.1-0neon) xenial; urgency=medium
 
