--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kcron (4:17.08.3-2) UNRELEASED; urgency=medium
+
+
+ -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 05 Jan 2018 15:57:23 +0100
+
 kcron (4:17.08.3-1) unstable; urgency=medium
 
   * Team upload.
