--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ kcron (4:17.08.3-2) UNRELEASED; urgency=medium
   * Stop forcing the local installation directory, since there is only one
     binary now.
   * Remove pre-Jessie breaks/replaces.
+  * Bump Standards-Version to 4.1.3, no changes required.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 05 Jan 2018 15:57:23 +0100
 
