--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,13 @@
-kcron (4:17.08.3-2) UNRELEASED; urgency=medium
+kcron (4:17.08.3-2) unstable; urgency=medium
 
-  [ Pino Toscano ]
+  * Team upload.
   * Remove the transitional package kcron. (Closes: #878606)
   * Stop forcing the local installation directory, since there is only one
     binary now.
   * Remove pre-Jessie breaks/replaces.
   * Bump Standards-Version to 4.1.3, no changes required.
 
- -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 05 Jan 2018 15:57:23 +0100
+ -- Pino Toscano <pino@debian.org>  Sat, 20 Jan 2018 10:00:32 +0100
 
 kcron (4:17.08.3-1) unstable; urgency=medium
 
